remove cobertura and added junit5 jupiter in all tests